Fixed package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,10 @@ name = rmux
 summary = remux allows you to run your local project on multiple remote machines in parallel
 description-file =
     README.md
-long_description_content_type = ='text/markdown'
+long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 author = Sorin Sbarnea
 author-email = sorin.sbarnea@gmail.com
-home-page = http://www.openstack.org/
+home-page = https://github.com/pycontribs/rmux/
 classifier =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
@@ -20,6 +20,14 @@ classifier =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+license = Apache
+license-files = LICENSE
+requires-external =
+    tmux
+    xpanes
+project-url =
+    Bug Tracker, https://github.com/pycontribs/rmux/issues
+platform = any
 
 [files]
 packages =
