--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,14 @@ install_command = pip install {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
-   OS_STDOUT_CAPTURE=1
-   OS_STDERR_CAPTURE=1
-   OS_TEST_TIMEOUT=60
 deps = -r{toxinidir}/test-requirements.txt
-commands = stestr run {posargs}
+whitelist_externals =
+    bash
+    rm
 
 [testenv:lint]
 commands =
+    bash -c "rm -rf {toxinidir}/dist/ && mkdir -p {toxinidir}/dist/"
     python setup.py -q sdist bdist_wheel
     twine check dist/*
     pre-commit run -a
@@ -24,11 +24,7 @@ commands =
 [testenv:upload]
 commands =
     {[testenv:lint]commands}
-    twine upload dist/*
+    twine upload --verbose dist/*
 
 [testenv:venv]
 commands = {posargs}
-
-[testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -W -b html doc/source doc/build/html
