--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.0
-envlist = lint
+envlist = lint,py27,py37
 skipsdist = True
 
 [testenv]
@@ -9,10 +9,19 @@ install_command = pip install {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
+passenv =
+    TERM
+    HOME
 deps = -r{toxinidir}/test-requirements.txt
 whitelist_externals =
     bash
     rm
+commands =
+    pip install -e .
+    rmux --help
+    rmux --version
+    rmux "df && exit"
+    rmux "df -h && exit"
 
 [testenv:lint]
 commands =
