chore: test packaging

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
 minversion = 2.0
-envlist = lint,py27,py37
+envlist = lint,py
 skipsdist = True
 
 [testenv]
+description = Run tests
 usedevelop = True
 install_command = pip install {opts} {packages}
 setenv =
@@ -16,6 +17,7 @@ deps = -r{toxinidir}/test-requirements.txt
 whitelist_externals =
     bash
     rm
+    sh
 commands =
     pip install -e .
     rmux --help
@@ -24,16 +26,33 @@ commands =
     rmux "df -h && exit"
 
 [testenv:lint]
+description = Lint the code
 commands =
     bash -c "rm -rf {toxinidir}/dist/ && mkdir -p {toxinidir}/dist/"
     python setup.py -q sdist bdist_wheel
     twine check dist/*
     pre-commit run -a
 
-[testenv:upload]
+[testenv:packaging]
+description = Check packaging
+deps =
+  build >= 0.7.0
+  twine
+# Ref: https://twitter.com/di_codes/status/1044358639081975813
 commands =
-    {[testenv:lint]commands}
-    twine upload --verbose dist/*
+  # build wheel and sdist using PEP-517
+  {envpython} -c 'import os.path, shutil, sys; \
+  dist_dir = os.path.join("{toxinidir}", "dist"); \
+  os.path.isdir(dist_dir) or sys.exit(0); \
+  print("Removing \{!s\} contents...".format(dist_dir), file=sys.stderr); \
+  shutil.rmtree(dist_dir)'
+  {envpython} -m build \
+    --outdir {toxinidir}/dist/ \
+    {toxinidir}
+  # Validate metadata using twine
+  twine check --strict {toxinidir}/dist/*
+  # Install the wheel
+  sh -c "python3 -m pip install {toxinidir}/dist/*.whl"
 
 [testenv:venv]
 commands = {posargs}
