--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -31,6 +31,7 @@ jobs:
         - ubuntu-20.04
         env:
         - TOXENV: lint
+        - TOXENV: packaging
     env:
       TOX_PARALLEL_NO_SPINNER: 1
       FORCE_COLOR: 1
@@ -46,21 +47,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    # - name: set PY_SHA256
-    #   run: echo "::set-env name=PY_SHA256::$(python -VV | sha256sum | cut -d' ' -f1)"
-    # - name: Pre-commit cache
-    #   uses: actions/cache@v1
-    #   with:
-    #     path: ~/.cache/pre-commit
-    #     key: ${{ runner.os }}-pre-commit-${{ env.PY_SHA256 }}-${{ hashFiles('setup.cfg') }}-${{ hashFiles('tox.ini') }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('.pre-commit-config.yaml') }}-${{ hashFiles('pytest.ini') }}
-    # - name: Pip cache
-    #   uses: actions/cache@v1
-    #   with:
-    #     path: ~/.cache/pip
-    #     key: ${{ runner.os }}-pip-${{ env.PY_SHA256 }}-${{ hashFiles('setup.cfg') }}-${{ hashFiles('tox.ini') }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('.pre-commit-config.yaml') }}-${{ hashFiles('pytest.ini') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-pip-
-    #       ${{ runner.os }}-
     - name: Install tox
       run: |
         python3 -m pip install --upgrade pip
@@ -94,13 +80,7 @@ jobs:
       ${{ matrix.tox_env }}@${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      # fail-fast: false
-      # max-parallel: 5
-      # The matrix testing goal is to cover the *most likely* environments
-      # which are expected to be used by users in production. Avoid adding a
-      # combination unless there are good reasons to test it, like having
-      # proof that we failed to catch a bug by not running it. Using
-      # distribution should be prefferred instead of custom builds.
+      fail-fast: false
       matrix:
         python-version:
         # keep list sorted as it determines UI order too
@@ -190,25 +170,12 @@ jobs:
         --skip-missing-interpreters false
         -vv
       env:
-        TOXENV: ${{ matrix.tox_env }}-core,${{ matrix.tox_env }}-ansible29
-    # sequential run improves browsing experience (almost no speed impact)
-    - name: "Test with tox: ${{ matrix.tox_env }}-core"
+        TOXENV: py
+    - name: "Test with tox"
       run: |
         python3 -m tox
       env:
-        TOXENV: ${{ matrix.tox_env }}-core
-    - name: "Test with tox: ${{ matrix.tox_env }}-ansible29"
-      if: ${{ !matrix.skip_ansible29 }}
-      run: |
-        python3 -m tox
-      env:
-        TOXENV: ${{ matrix.tox_env }}-ansible29
-    - name: "Test with tox: ${{ matrix.tox_env }}-devel"
-      if: ${{ matrix.devel }}
-      run: |
-        python3 -m tox
-      env:
-        TOXENV: ${{ matrix.tox_env }}-devel
+        TOXENV: py
     - name: Archive logs
       uses: actions/upload-artifact@v2
       with:
