--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,26 @@
 [tox]
 minversion = 2.0
-envlist = lint,py
+envlist =
+    lint
+    packaging
+    py
 skipsdist = True
+isolated_build = true
 
 [testenv]
 description = Run tests
-usedevelop = True
-install_command = pip install {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
 passenv =
     TERM
     HOME
-deps = -r{toxinidir}/test-requirements.txt
+deps =
+    --editable .
+    -r{toxinidir}/test-requirements.txt
+# both options needed to workaround https://github.com/tox-dev/tox/issues/2197
+usedevelop = false
+skip_install = true
 whitelist_externals =
     bash
     rm
@@ -28,9 +35,6 @@ commands =
 [testenv:lint]
 description = Lint the code
 commands =
-    bash -c "rm -rf {toxinidir}/dist/ && mkdir -p {toxinidir}/dist/"
-    python setup.py -q sdist bdist_wheel
-    twine check dist/*
     pre-commit run -a
 
 [testenv:packaging]
