--- a/setup.cfg
+++ b/setup.cfg
@@ -22,18 +22,30 @@ classifiers =
   Topic :: Software Development :: Quality Assurance
   Topic :: Software Development :: Testing
 license = Apache
-license-files = LICENSE
-requires-external =
+license_files = LICENSE
+requires_external =
     tmux
     xpanes
-project-url =
+project_url =
     Bug Tracker, https://github.com/pycontribs/rmux/issues
 platform = any
+[options]
+use_scm_version = True
+python_requires = >=3.8
+package_dir =
+  = src
+packages = find:
+zip_safe = False
+
+# These are required in actual runtime:
+install_requires =
 
 [options.entry_points]
 console_scripts =
-  ansible-lint = rmux.__main__:main
+  rmux = rmux.__main__:main
 
 [files]
 packages =
     rmux
+[options.packages.find]
+where = src
