--- a/setup.cfg
+++ b/setup.cfg
@@ -1,34 +1,51 @@
 [metadata]
 name = rmux
-summary = remux allows you to run your local project on multiple remote machines in parallel
-description-file =
-    README.md
+description = remux allows you to run your local project on multiple remote machines in parallel
+long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 author = Sorin Sbarnea
-author-email = sorin.sbarnea@gmail.com
-home-page = https://github.com/pycontribs/rmux/
-classifier =
+author_email = sorin.sbarnea@gmail.com
+home_page = https://github.com/pycontribs/rmux/
+classifiers =
+    Environment :: Console
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+  Topic :: Software Development :: Quality Assurance
+  Topic :: Software Development :: Testing
 license = Apache
-license-files = LICENSE
-requires-external =
+license_files = LICENSE
+requires_external =
     tmux
     xpanes
-project-url =
+project_url =
     Bug Tracker, https://github.com/pycontribs/rmux/issues
 platform = any
+[options]
+use_scm_version = True
+python_requires = >=3.8
+package_dir =
+  = src
+packages = find:
+zip_safe = False
+
+# These are required in actual runtime:
+install_requires =
+
+[options.entry_points]
+console_scripts =
+  rmux = rmux.__main__:main
 
 [files]
 packages =
     rmux
+[options.packages.find]
+where = src
